GNOME Bugzilla – Bug 724564
Download buffering not working with 1.3 (regression)
Last modified: 2014-02-18 10:58:45 UTC
Works with 1.2.
Could you attach a xz-ed GST_DEBUG=*:6 log please? Might help figure out why it doesn't for you while it does work for me.
Here it is: https://people.gnome.org/~hadess/no-download-buffering-bug-724564.log.xz
souphttpsrc does not report the duration in BYTES anymore.
commit 04a6c661c82a29df0627519da678595f48aa8abd Author: Wim Taymans <wtaymans@redhat.com> Date: Tue Feb 18 11:49:37 2014 +0100 basesrc: in automatic_eos mode, don't modify the size Don't set the size to -1 in automatic_eos mode (which also updates the duration to -1). We only want automatic_eos mode influence the maxsize calculations without any side effects. Fixes https://bugzilla.gnome.org/show_bug.cgi?id=724564